tests/invalid/round_non_float/main.py
def run_case() -> None:
    x: int = round(1)

if __name__ == "__main__":
    run_case()
